--- a/CarRental/Pages/Index.razor
+++ b/CarRental/Pages/Index.razor
@@ -1,9 +1,93 @@
 ﻿@page "/"
+@using CarRental.Business.Classes;
+@inject BookingProcessor bp
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Car Rental</h1>
 
-Welcome to your new app.
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+<table class="table">
+    <thead>
+        <tr>
+            <th>Plate Nr</th>
+            <th>Make</th>
+            <th>Odometer</th>
+            <th>Cost/Km</th>
+            <th>Cost/Day</th>
+            <th>Vehicle Type</th>
+            <th>Vehicle Status</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var p in bp.VehicleData())
+        {
+            <tr>
+                <td>@p.PlateNumber</td>
+                <td>@p.Make</td>
+                <td>@p.Odometer</td>
+                <td>@p.CostPerKm</td>
+                <td>@p.CostPerDay</td>
+                <td>@p.VehicleType</td>
+                <td>@p.VehicleStatus</td>
+            </tr>
+        }
+    </tbody>
+</table>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>Plate Nr</th>
+            <th>Customer</th>
+            <th>Rented At Km</th>
+            <th>Returned At Km</th>
+            <th>Rented</th>
+            <th>Returned</th>
+            <th>Total Cost</th>
+            <th>TVehicle Status</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var p in bp.BookingData())
+        {
+            <tr>
+                <td>@p.PlateNumber</td>
+                <td>@p.Customer</td>
+                <td>@p.KmRented</td>
+                <td>@p.KmReturned</td>
+                <td>@p.RentedAtDate</td>
+                <td>@p.ReturnedAtDate</td>
+                <td>@p.TotalCost</td>
+                <td>@p.VehicleStatus</td>
+            </tr>
+        }
+    </tbody>
+</table>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>SSN</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var p in bp.PersonData())
+        {
+            <tr>
+                <td>@p.SocialSecNum</td>
+                <td>@p.FName</td>
+                <td>@p.LName</td>
+            </tr>
+        }
+    </tbody>
+</table>
+
+
+@code 
+{
+
+}
+
